poprawki do bugow

--- a/app/src/main/res/layout/x_grid_row.xml
+++ b/app/src/main/res/layout/x_grid_row.xml
@@ -27,6 +27,6 @@
             android:layout_height="90dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/homek" />
+            android:src="@drawable/camaro" />
     </RelativeLayout>
 </RelativeLayout>
