--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -63,9 +63,8 @@
         android:id="@+id/amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="73dp"
         android:text="TextView"
         android:textColor="@color/colorPrice"
-        app:layout_constraintStart_toEndOf="@+id/price"
-        app:layout_constraintTop_toBottomOf="@+id/remove_button" />
+        tools:layout_editor_absoluteX="296dp"
+        tools:layout_editor_absoluteY="94dp" />
 </android.support.constraint.ConstraintLayout>
