--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -3,24 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/sort_button"
-        android:title="Item" />
-    <item
         android:id="@+id/miHome"
         android:icon="@drawable/homek"
         android:title="Home"
         app:showAsAction="always" />
 
-    <item android:id="@+id/search_action"
-        android:title="@string/search"
-        android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="ifRoom"
-        app:actionViewClass="android.support.v7.widget.SearchView" />
-    <item
-        android:id="@+id/miCompose"
-        android:icon="@drawable/ic_compose"
-        android:title="Compose"
-        app:showAsAction="ifRoom"></item>
     <item
         android:id="@+id/miProfile"
         android:icon="@drawable/ic_profile"
@@ -30,22 +17,9 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="Settings"
-        app:showAsAction="always"
-        android:visible="true" />
-
-    <item
-        android:id="@+id/action_login"
-        android:orderInCategory="100"
-        android:title="Log In"
-        app:showAsAction="never"
-        android:visible="true" />
-    <item
-        android:id="@+id/cat_button"
-        android:title="Item" />
-    <item
-        android:id="@+id/filter_button"
-        android:title="Item" />
+        android:title="Gallery"
+        android:visible="true"
+        app:showAsAction="always" />
 
 
 </menu>
