--- a/app/src/main/res/layout/activity_buttons.xml
+++ b/app/src/main/res/layout/activity_buttons.xml
@@ -15,15 +15,16 @@
         android:layout_marginTop="80dp"
         android:layout_marginEnd="70dp"
         android:layout_marginBottom="23dp"
-        android:fontFamily="monospace"
-        android:lineSpacingExtra="8sp"
-        android:text="CarDeal"
+        android:fontFamily="sans-serif"
+        android:lineSpacingExtra="10sp"
+        android:text=" CarDeal"
         android:textAlignment="center"
+        android:textAllCaps="false"
         android:textColor="@color/colorPrimary"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:typeface="normal"
+        android:textSize="44sp"
 
+        android:textStyle="bold"
+        android:typeface="sans"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -125,8 +126,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:background="@color/colorBtn"
-        android:onClick="showFavourites"
-        android:text="Ulubione"
+        android:onClick="showAuto"
+        android:text="Szczegoly"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
