--- a/app/src/main/res/layout/activity_auto.xml
+++ b/app/src/main/res/layout/activity_auto.xml
@@ -1,6 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:background="@color/colorTlo"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="323dp"
+        android:layout_height="161dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
+        android:text="Chevrolet Camaro – amerykański samochód osobowy typu pony car produkowany przez koncern General Motors pod marką Chevrolet w latach 1967 - 2002 oraz ponownie od 2009 roku. Pierwszy egzemplarz zaprezentowano 12 września 1966 roku[1] w Detroit. Pojazd dzielił podwozie oraz większość części z Pontiaciem Firebird. "
+        android:textAlignment="center"
+        android:textColor="@color/default_circle_indicator_fill_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="12dp"
+        android:isIndicator="false"
+        android:numStars="5"
+        android:rating="4"
+        android:theme="@style/RatingBar"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="290dp"
+        android:layout_height="324dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/camaro" />
 </android.support.constraint.ConstraintLayout>
