Revert "dwa autka"
This reverts commit ecd973941d199059afff85e664a68b129ae90ef3.

--- a/app/src/main/res/layout/activity_buttons.xml
+++ b/app/src/main/res/layout/activity_buttons.xml
@@ -40,7 +40,7 @@
         android:background="@drawable/backradius"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title3"
-        app:srcCompat="@drawable/audi"></ImageView>
+        app:srcCompat="@drawable/audi2"></ImageView>
 
 
     <ImageView
@@ -51,7 +51,7 @@
         android:background="@drawable/backradius"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title3"
-        app:srcCompat="@drawable/chevrolet"></ImageView>
+        app:srcCompat="@drawable/audi2"></ImageView>
 
     <ImageView
         android:id="@+id/imageView5"
