--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorTlo"
-    tools:context="pl.szop.cardeal.views.CategoryActivity">
+    tools:context="pl.szop.andrzejshop.views.CategoryActivity">
 
     <TextView
         android:id="@+id/title2"
@@ -74,7 +74,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button_sedan" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/htmlcar"
         android:layout_width="256dp"
         android:layout_height="245dp"
         android:layout_marginStart="43dp"
@@ -83,7 +83,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/car" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
