--- a/app/src/main/res/layout/activity_buttons.xml
+++ b/app/src/main/res/layout/activity_buttons.xml
@@ -15,15 +15,14 @@
         android:layout_marginTop="80dp"
         android:layout_marginEnd="70dp"
         android:fontFamily="sans-serif"
-        android:lineSpacingExtra="10sp"
-        android:text=" CarDeal"
+        android:lineSpacingExtra="24sp"
+        android:text="CarDeal"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/colorPrimary"
-        android:textSize="44sp"
 
-        android:textStyle="bold"
-        android:typeface="sans"
+        android:textSize="44sp"
+        android:typeface="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
