--- a/app/src/main/res/layout/item_product_list.xml
+++ b/app/src/main/res/layout/item_product_list.xml
@@ -19,35 +19,38 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="81dp"
+        android:layout_width="66dp"
         android:layout_height="32dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="16dp"
         android:text="Model"
+        android:textAlignment="textStart"
         android:textColor="@color/colorPrimary"
         app:layout_constraintStart_toEndOf="@+id/cover"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/author"
-        android:layout_width="57dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="67dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="14dp"
         android:text="Marka"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintStart_toEndOf="@+id/title"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/cover"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <TextView
         android:id="@+id/price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="60dp"
+        android:layout_width="54dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="32dp"
         android:text="cena"
-        android:textColor="@color/colorPrimary"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textAlignment="viewStart"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@+id/title"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -65,14 +68,13 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="26dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="21dp"
-        android:layout_marginEnd="18dp"
-        android:text="$"
-        android:textColor="@color/colorPrimary"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="29dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="32dp"
+        android:text="9$"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@+id/price"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
