--- a/app/src/main/res/layout/item_product_list.xml
+++ b/app/src/main/res/layout/item_product_list.xml
@@ -19,7 +19,7 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="95dp"
+        android:layout_width="103dp"
         android:layout_height="26dp"
         android:layout_marginStart="18dp"
         android:layout_marginTop="5dp"
@@ -32,7 +32,7 @@
 
     <TextView
         android:id="@+id/author"
-        android:layout_width="94dp"
+        android:layout_width="115dp"
         android:layout_height="33dp"
         android:layout_marginStart="18dp"
         android:layout_marginTop="14dp"
@@ -46,12 +46,12 @@
         android:id="@+id/price"
         android:layout_width="54dp"
         android:layout_height="30dp"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="32dp"
         android:text="cena"
         android:textAlignment="viewStart"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="14sp"
+        android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/title"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -70,12 +70,12 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="29dp"
+        android:layout_width="46dp"
         android:layout_height="30dp"
         android:layout_marginTop="32dp"
-        android:text="9$"
+        android:text="$"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="14sp"
+        android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/price"
         app:layout_constraintTop_toTopOf="parent" />
 
