--- a/app/src/main/res/layout/x_grid_item.xml
+++ b/app/src/main/res/layout/x_grid_item.xml
@@ -22,7 +22,7 @@
         android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/camaro"
+        android:src="@drawable/camaro3"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/griddata"
         android:layout_marginTop="27dp" />
