--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     <item
         android:id="@+id/miHome"
         android:icon="@drawable/homek"
         android:title="Home"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/miGrid"
+        android:icon="@drawable/grid"
+        android:title="Item"
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/miProfile"
-        android:icon="@drawable/ic_profile"
+        android:icon="@drawable/starfav"
         android:title="Profile"
         app:showAsAction="always"></item>
 
     <item
         android:id="@+id/action_settings"
+        android:icon="@drawable/gallery"
         android:orderInCategory="100"
         android:title="Gallery"
         android:visible="true"
