--- a/app/src/main/res/layout/view_pager.xml
+++ b/app/src/main/res/layout/view_pager.xml
@@ -3,13 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp"
     android:background="@color/colorTlo"
     tools:context="pl.szop.andrzejshop.views.ViewPagerActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+
+
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPageAndroid"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="368dp"
+        android:layout_height="472dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp" />
 
 </RelativeLayout>
