toolbar + color fix

--- a/app/src/main/res/layout/item_product_list.xml
+++ b/app/src/main/res/layout/item_product_list.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="5dp"
         android:text="Model"
         android:textAlignment="textStart"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorNapis"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/cover"
         app:layout_constraintTop_toTopOf="parent" />
@@ -37,7 +37,7 @@
         android:layout_marginStart="18dp"
         android:layout_marginTop="14dp"
         android:text="Marka"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorNapis"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/cover"
         app:layout_constraintTop_toBottomOf="@+id/title" />
