--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="duskYellow">#fff82f</color>
     <color name="lightGrey">#acb4ba</color>
     <color name="colorBtn">#02710d</color>
+    <color name="colorNapis">#4eff60</color>
 </resources>
