--- a/app/src/main/res/menu/single_menu.xml
+++ b/app/src/main/res/menu/single_menu.xml
@@ -6,6 +6,7 @@
     <item
         android:id="@+id/media_route_menu_item"
         android:title="Cast"
+        android:visible="true"
         app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
         app:showAsAction="always"
         tools:icon="@drawable/mr_button_light" />
@@ -13,6 +14,7 @@
         android:id="@+id/action_info"
         android:icon="@drawable/ic_info_black_24dp"
         android:title="Info"
+        android:visible="true"
         app:showAsAction="always">
 
     </item>
