--- a/app/src/main/res/layout/activity_products_list.xml
+++ b/app/src/main/res/layout/activity_products_list.xml
@@ -54,7 +54,8 @@
         <ImageButton
             android:id="@+id/change_view_button"
             android:layout_width="50dp"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:visibility="invisible" />
     </LinearLayout>
 
     <TextView
