--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -13,7 +13,7 @@
         android:id="@+id/promotion_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Promocje"
+        android:text="Nowe Auta w Salonie"
         android:textSize="30sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteY="16dp"
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Nowości"
+        android:text="Auta Uzywane"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/promotion_list"
@@ -52,7 +52,7 @@
         android:id="@+id/category_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Horror"
+        android:text="Polecane"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/new_list"
