--- a/app/src/main/res/layout/item_book_main.xml
+++ b/app/src/main/res/layout/item_book_main.xml
@@ -33,7 +33,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:tag="title"
-            android:text="Tytuł"
+            android:text="Model"
             android:textSize="20dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
             android:tag="priceText"
-            android:text="00 zł"
+            android:text="0000 zł"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/menu_more"
             app:layout_constraintStart_toStartOf="parent"
