--- a/app/src/main/res/layout/item_favorites.xml
+++ b/app/src/main/res/layout/item_favorites.xml
@@ -28,7 +28,7 @@
         android:tag="book.title"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:text="Tytul"
+        android:text="Model"
         app:layout_constraintStart_toEndOf="@+id/cover"
         app:layout_constraintTop_toBottomOf="@+id/price" />
 
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Autor"
+        android:text="marka"
         app:layout_constraintStart_toEndOf="@+id/cover"
         app:layout_constraintTop_toBottomOf="@+id/title" />
 
