--- a/app/src/main/res/layout/item_promotion_main.xml
+++ b/app/src/main/res/layout/item_promotion_main.xml
@@ -36,7 +36,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:tag="book.title"
-            android:text="Tytuł"
+            android:text="Model"
             android:textSize="20dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
             android:tag="book.priceText"
-            android:text="00 zł"
+            android:text="0000 zł"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/menu_more"
             app:layout_constraintStart_toStartOf="parent"
