--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ADADAD</color>
-    <color name="colorPrimaryDark">#03A9F4</color>
+    <color name="colorPrimary">#FF5722</color>
+    <color name="colorPrimaryDark">#2439BE</color>
     <color name="colorAccent">#4CAF50</color>
     <color name="colorPrice">#4CAF50</color>
     <color name="colorBlue">#FFFFFF</color>
